fix: truncate tag strings

--- a/src/components/reusable/multiInputField/multiInputField.scss
+++ b/src/components/reusable/multiInputField/multiInputField.scss
@@ -110,6 +110,13 @@
   align-items: center;
   line-height: 1.2;
   gap: 8px;
+
+  span {
+    max-width: 30ch;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
 }
 
 .caption-count-container {
